// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) isLoading 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <p
          className="bx--skeleton__text"
          style={
            Object {
              "width": "30%",
            }
          }
        />
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) normal 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <div
          className="Hero__StyledTitleSection-nej8yx-1 imCjnH"
        >
          <div
            className="Hero__StyledTitle-nej8yx-2 emqnjy"
          >
            Explore
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) with breadcrumb 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <div
          className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
        >
          <nav
            aria-label="Breadcrumb"
            className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
          >
            <ol
              className="bx--breadcrumb"
            >
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Type
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <span
                  className="bx--link"
                >
                  Instance
                </span>
              </li>
            </ol>
          </nav>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          />
        </div>
        <div
          className="Hero__StyledTitleSection-nej8yx-1 djCalR"
        >
          <div
            className="Hero__StyledTitle-nej8yx-2 emqnjy"
          >
            Explore
          </div>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          >
            <div
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Right Content
            </div>
          </div>
        </div>
        <p
          className="Hero__StyledPageDescription-nej8yx-3 hgaTeB"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
        </p>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) with breadcrumb with right content 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <div
          className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
        >
          <nav
            aria-label="Breadcrumb"
            className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
          >
            <ol
              className="bx--breadcrumb"
            >
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Type
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <span
                  className="bx--link"
                >
                  Instance
                </span>
              </li>
            </ol>
          </nav>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          >
            <div
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              breadcrumb Right Content
            </div>
          </div>
        </div>
        <div
          className="Hero__StyledTitleSection-nej8yx-1 djCalR"
        >
          <div
            className="Hero__StyledTitle-nej8yx-2 emqnjy"
          >
            Explore
          </div>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          >
            <div
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Right Content
            </div>
          </div>
        </div>
        <p
          className="Hero__StyledPageDescription-nej8yx-3 hgaTeB"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
        </p>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) with close button 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <div
          className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
        >
          <nav
            aria-label="Breadcrumb"
            className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
          >
            <ol
              className="bx--breadcrumb"
            >
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Type
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <span
                  className="bx--link"
                >
                  Instance
                </span>
              </li>
            </ol>
          </nav>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          />
        </div>
        <div
          className="Hero__StyledTitleSection-nej8yx-1 djCalR"
        >
          <div
            className="Hero__StyledTitle-nej8yx-2 emqnjy"
          >
            Explore
          </div>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          >
            <div
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Right Content
            </div>
          </div>
          <button
            aria-label="Close"
            className="bx--modal-close"
            data-modal-close={true}
            onClick={[Function]}
            type="button"
          >
            <svg
              className="bx--modal-close__icon"
              height="10"
              viewBox="0 0 10 10"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Close
              </title>
              <path
                d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
                fillRule="nonzero"
              />
            </svg>
          </button>
        </div>
        <p
          className="Hero__StyledPageDescription-nej8yx-3 hgaTeB"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
        </p>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) with description 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <div
          className="Hero__StyledTitleSection-nej8yx-1 imCjnH"
        >
          <div
            className="Hero__StyledTitle-nej8yx-2 emqnjy"
          >
            Explore
          </div>
        </div>
        <p
          className="Hero__StyledPageDescription-nej8yx-3 hgaTeB"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
        </p>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) with right content 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <div
          className="Hero__StyledTitleSection-nej8yx-1 imCjnH"
        >
          <div
            className="Hero__StyledTitle-nej8yx-2 emqnjy"
          >
            Explore
          </div>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div>
                Here is a long message relating some status... 
              </div>
              <button
                className="bx--btn bx--btn--secondary"
                disabled={false}
                tabIndex={0}
                type="button"
              >
                Cancel
              </button>
              <button
                className="bx--btn bx--btn--primary"
                disabled={false}
                tabIndex={0}
                type="button"
              >
                Take action!
              </button>
            </div>
          </div>
        </div>
        <p
          className="Hero__StyledPageDescription-nej8yx-3 hgaTeB"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
        </p>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) with tooltip (no link) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <div
          className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
        >
          <nav
            aria-label="Breadcrumb"
            className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
          >
            <ol
              className="bx--breadcrumb"
            >
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Type
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <span
                  className="bx--link"
                >
                  Instance
                </span>
              </li>
            </ol>
          </nav>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          />
        </div>
        <div
          className="Hero__StyledTitleSection-nej8yx-1 djCalR"
        >
          <div
            className="Hero__StyledTitle-nej8yx-2 emqnjy"
          >
            Explore
            <div
              className="bx--tooltip__label"
              id="hero-tooltip-trigger"
            >
              
              <div
                aria-describedby={null}
                aria-haspopup="true"
                className="bx--tooltip__trigger"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="button"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 22v-9h-4v2h2v7h-3v2h8v-2h-3zM16 7a1.5 1.5 0 1 0 1.5 1.5A1.5 1.5 0 0 0 16 7z"
                  />
                  <path
                    d="M16 30a14 14 0 1 1 14-14 14 14 0 0 1-14 14zm0-26a12 12 0 1 0 12 12A12 12 0 0 0 16 4z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          >
            <div
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Right Content
            </div>
          </div>
        </div>
        <p
          className="Hero__StyledPageDescription-nej8yx-3 hgaTeB"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
        </p>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) with tooltip 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "calc(100vw - 6rem)",
        }
      }
    >
      <div
        className="Hero__StyledHero-nej8yx-0 fTphDS"
      >
        <div
          className="Hero__StyledBreadcrumbDiv-nej8yx-6 brbWug"
        >
          <nav
            aria-label="Breadcrumb"
            className="Hero__StyledBreadcrumb-nej8yx-5 kRUzlm"
          >
            <ol
              className="bx--breadcrumb"
            >
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <a
                  className="bx--link"
                  href="/"
                >
                  Type
                </a>
              </li>
              <li
                className="bx--breadcrumb-item"
              >
                <span
                  className="bx--link"
                >
                  Instance
                </span>
              </li>
            </ol>
          </nav>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          />
        </div>
        <div
          className="Hero__StyledTitleSection-nej8yx-1 djCalR"
        >
          <div
            className="Hero__StyledTitle-nej8yx-2 emqnjy"
          >
            Explore
            <div
              className="bx--tooltip__label"
              id="hero-tooltip-trigger"
            >
              
              <div
                aria-describedby={null}
                aria-haspopup="true"
                className="bx--tooltip__trigger"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="button"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  style={
                    Object {
                      "willChange": "transform",
                    }
                  }
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 22v-9h-4v2h2v7h-3v2h8v-2h-3zM16 7a1.5 1.5 0 1 0 1.5 1.5A1.5 1.5 0 0 0 16 7z"
                  />
                  <path
                    d="M16 30a14 14 0 1 1 14-14 14 14 0 0 1-14 14zm0-26a12 12 0 1 0 12 12A12 12 0 0 0 16 4z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            className="Hero__StyledRightContent-nej8yx-4 cCeABe"
          >
            <div
              style={
                Object {
                  "textAlign": "right",
                }
              }
            >
              Right Content
            </div>
          </div>
        </div>
        <p
          className="Hero__StyledPageDescription-nej8yx-3 hgaTeB"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut auctor tortor, et condimentum dolor. Pellentesque ac justo nec dui semper bibendum. Sed mollis euismod nisi nec dapibus. Vestibulum vehicula tristique mi facilisis aliquet. Sed lacinia nisi eget dolor suscipit convallis
        </p>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Hero (Deprecated) ️⛔ Deprecation Notice  1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={Object {}}
    >
      <div
        className="bx--toast-notification bx--toast-notification--warning"
        kind="warning"
        role="alert"
        style={
          Object {
            "marginBottom": ".5rem",
            "minWidth": "30rem",
          }
        }
        timeout={0}
      >
        <svg
          aria-hidden={true}
          className="bx--toast-notification__icon"
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "willChange": "transform",
            }
          }
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 1c-5 0-9 4-9 9s4 9 9 9 9-4 9-9-4-9-9-9zm-.8 4h1.5v7H9.2V5zm.8 11c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
          />
          <path
            d="M9.2 5h1.5v7H9.2V5zm.8 11c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
            data-icon-path="inner-path"
            opacity="0"
          />
          <title>
            
          </title>
        </svg>
        <div
          className="bx--toast-notification__details"
        >
          <h3
            className="bx--toast-notification__title"
          >
            Deprecation Notice
          </h3>
          <div
            className="bx--toast-notification__subtitle"
          >
            Hero has been deprecated and will be removed in the next major version of carbon-addons-iot-react.
          </div>
          <div
            className="bx--toast-notification__caption"
          >
            Refactor usages of Hero to use PageTitleBar instead.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
